--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,33 +4,50 @@ name: CI
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
+  # 在推送到 master 分支时会自动运行一次
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    branches: 
+      - master
+  # 可以设定定时任务执行
+  schedule:
+    # UTC 0 点 30 定期执行一次，跟北京时间大概相距8小时，但因为排队可能会稍微延后半小时左右
+    # 即北京时间 8 点 30 以后
+    - cron: '30 0 * * *'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  auto_sign:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      # 将本仓库的代码拉取一份到虚拟环境机器上
+      - name: Checkout
+        uses: actions/checkout@v2
+      # 配置安装 python 环境
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8.2
+      # 配置安装依赖包
+      - name: Install requirements
+        run: pip install -r requirements.txt
+      # 运行 python 脚本文件，其中的参数取 secrets 中配置的加密参数，账户名和密码
+      - name: Working
+        run: python arctime_auto_sign.py ${{ secrets.USERNAME }} ${{ secrets.PASSWORD }}
+      # 发送日志邮件
+      - name: send log mail
+        uses: dawidd6/action-send-mail@v2.2.2
+        with:
+          # qq 邮箱默认 server 写 stmp.qq.com，如果是腾讯企业邮，则写 smtp.exmail.qq.com
+          server_address: ${{ secrets.MAIL_SMTP_SERVER }}
+          server_port: 465
+          username: ${{ secrets.MAIL_USERNAME }}
+          password: ${{ secrets.MAIL_PASSWORD }}
+          subject: arctime 签到情况
+          body: file://log.log
+          to: ${{ secrets.MAIL_TO }}
+          from: GitHub Actions
+          content_type: text/plain
