--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ on:
   schedule:
     # UTC 0 点 30 定期执行一次，跟北京时间大概相距8小时，但因为排队可能会稍微延后半小时左右
     # 即北京时间 8 点 30 以后
-    - cron: '30 0 * * *'
+    - cron: '40 21 * * *'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -36,7 +36,7 @@ jobs:
         run: pip install -r requirements.txt
       # 运行 python 脚本文件，其中的参数取 secrets 中配置的加密参数，账户名和密码
       - name: Working
-        run: python arctime_auto_sign.py ${{ secrets.USERNAME }} ${{ secrets.PASSWORD }}
+        run: python auto_sign.py ${{ secrets.USERNAME }} ${{ secrets.PASSWORD }}
       # 发送日志邮件
       - name: send log mail
         uses: dawidd6/action-send-mail@v2.2.2
