--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,5 +39,11 @@ jobs:
       # 运行 python 脚本文件，其中的参数取 secrets 中配置的加密参数，账户名和密码
       - name: Working
         run: |
-          random_time=$(($RANDOM % 186))
+          random_time=$(($RANDOM % 6))
           echo "等待 ${random_time} 分钟后开始签到"
+          for((i=1;i<=${random_time};i++));  
+          do
+          echo "倒计时 $[${random_time}-$i] 分钟"
+          sleep 1m
+          done
+          python auto_sign.py ${{ secrets.ATPAUTHTOKEN }} ${{ secrets.MOBILE }}  ${{ secrets.USERID}}  ${{ secrets.USERSIG}} ${{ secrets.ACW_TC}} ${{ secrets.CX_SIGN}} ${{ secrets.SIGN_7207}} ${{ secrets.SIGN_8291}} ${{ secrets.YH_MEMBERID}} ${{ secrets.YH_ACCESS_TOKEN}} ${{ secrets.YH_DEVICEID}} ${{ secrets.YH_SIGN}} ${{ secrets.SIGN_7206}} ${{ secrets.SIGN_8958}} ${{ secrets.SIGN_2695}} ${{ secrets.SIGN_0883}}
